--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,9 @@ jobs:
           - { php: 8.1, lib: { laravel: ^7.0, polyfill: '1' }, db: sqlsrv }
           - { php: 8.1, lib: { laravel: ^6.0, polyfill: '1' }, db: sqlsrv }
           - { php: 7.4, lib: { laravel: ^9.0 }, db: sqlsrv }
+        include:
+          - { php: 8.1, lib: { laravel: ^9.0 }, db: sqlsrv, odbc: '1' }
+          - { php: 8.1, lib: { laravel: ^8.0 }, db: sqlsrv, odbc: '1' }
 
     steps:
       - uses: actions/checkout@v2
@@ -114,6 +117,7 @@ jobs:
         env:
           DB: ${{ matrix.db }}
           ENABLE_POLYFILL: ${{ matrix.lib.polyfill }}
+          ENABLE_ODBC: ${{ matrix.odbc }}
 
       - name: Upload Coverage
         uses: nick-invision/retry@v2
