feat: 🎸 Support phpstan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,8 +112,13 @@ jobs:
       - name: Prepare Coverage Directory
         run: mkdir -p build/logs
 
+#      - name: PHPStan
+#        run: composer phpstan
+#        env:
+#          ENABLE_POLYFILL: ${{ matrix.lib.polyfill }}
+
       - name: Test
-        run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+        run: composer test -- --coverage-clover build/logs/clover.xml
         env:
           DB: ${{ matrix.db }}
           ENABLE_POLYFILL: ${{ matrix.lib.polyfill }}
