--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,22 +51,20 @@ jobs:
         lib:
           - { laravel: ^9.0 }
           - { laravel: ^8.0 }
-          - { laravel: ^7.0, polyfill: '1' }
-          - { laravel: ^6.0, polyfill: '1' }
+          - { laravel: ^7.0, polyfill: 'polyfill' }
+          - { laravel: ^6.0, polyfill: 'polyfill' }
         db: [mysql, pgsql, sqlite, sqlsrv]
+        odbc: [odbc, '']
         exclude:
-          - { php: 8.1, lib: { laravel: ^7.0, polyfill: '1' } }
-          - { php: 8.1, lib: { laravel: ^6.0, polyfill: '1' } }
+          # ignore odbc except for sqlsrv
+          - { db: mysql, odbc: odbc }
+          - { db: pgsql, odbc: odbc }
+          - { db: sqlite, odbc: odbc }
+          # ignore old Laravel for newer PHP
+          - { php: 8.1, lib: { laravel: ^7.0, polyfill: 'polyfill' } }
+          - { php: 8.1, lib: { laravel: ^6.0, polyfill: 'polyfill' } }
+          # ignore old PHP for newer Laravel
           - { php: 7.4, lib: { laravel: ^9.0 } }
-        include:
-          - { php: 8.1, lib: { laravel: ^9.0 }, db: sqlsrv, odbc: '1' }
-          - { php: 8.1, lib: { laravel: ^8.0 }, db: sqlsrv, odbc: '1' }
-          - { php: 8.1, lib: { laravel: ^9.0 }, db: sqlsrv, odbc: '' }
-          - { php: 8.1, lib: { laravel: ^8.0 }, db: sqlsrv, odbc: '' }
-          - { php: 8.1, lib: { laravel: ^9.0 }, db: sqlite, phpstan: '1' }
-          - { php: 8.1, lib: { laravel: ^8.0 }, db: sqlite, phpstan: '1' }
-          - { php: 8.0, lib: { laravel: ^9.0 }, db: sqlite, phpstan: '1' }
-          - { php: 8.0, lib: { laravel: ^8.0 }, db: sqlite, phpstan: '1' }
 
     steps:
       - uses: actions/checkout@v2
@@ -110,7 +108,7 @@ jobs:
         run: mkdir -p build/logs
 
       - name: PHPStan
-        if: ${{ matrix.phpstan }}
+        if: ${{ !matrix.lib.polyfill }}
         run: composer phpstan
 
       - name: Test
@@ -125,7 +123,7 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COVERALLS_PARALLEL: 'true'
-          COVERALLS_FLAG_NAME: 'db:${{ matrix.db }} laravel:${{ matrix.lib.laravel }} php:${{ matrix.php }}'
+          COVERALLS_FLAG_NAME: "db:${{ matrix.db }} odbc:${{ matrix.odbc || 'none' }} laravel:${{ matrix.lib.laravel }} php:${{ matrix.php }}"
         with:
           timeout_minutes: 1
           max_attempts: 3
