--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "ext-pdo": "*",
         "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
         "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0"
+        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "mpyw/unique-violation-detector": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "*",
