--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
       matrix:
         php: [8.1, '8.0', 7.4]
         lib:
+          - { laravel: ^10.0 }
           - { laravel: ^9.0 }
           - { laravel: ^8.0 }
           - { laravel: ^7.0, polyfill: 'polyfill' }
@@ -64,6 +65,8 @@ jobs:
           - { php: 8.1, lib: { laravel: ^7.0, polyfill: 'polyfill' } }
           - { php: 8.1, lib: { laravel: ^6.0, polyfill: 'polyfill' } }
           # ignore old PHP for newer Laravel
+          - { php: 8.0, lib: { laravel: ^10.0 } }
+          - { php: 7.4, lib: { laravel: ^10.0 } }
           - { php: 7.4, lib: { laravel: ^9.0 } }
 
     steps:
