--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-pdo": "*",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
         "mpyw/laravel-unique-violation-detector": "^1.0"
     },
     "require-dev": {
@@ -36,7 +36,7 @@
         "phpunit/phpunit": ">=9.5",
         "phpstan/phpstan": ">=1.1",
         "phpstan/extension-installer": ">=1.1",
-        "nunomaduro/larastan": "^1.0"
+        "nunomaduro/larastan": ">=1.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
@@ -49,6 +49,11 @@
             "includes": [
                 "extension.neon"
             ]
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "phpstan/extension-installer": true
         }
     }
 }
