--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,13 +47,11 @@ jobs:
 
     strategy:
       matrix:
-        php: [8.1, '8.0', 7.4]
+        php: ['8.0', 8.1, 8.2]
         lib:
+          - { laravel: ^11.0 }
           - { laravel: ^10.0 }
           - { laravel: ^9.0 }
-          - { laravel: ^8.0 }
-          - { laravel: ^7.0, polyfill: 'polyfill' }
-          - { laravel: ^6.0, polyfill: 'polyfill' }
         db: [mysql, pgsql, sqlite, sqlsrv]
         odbc: [odbc, '']
         exclude:
@@ -61,33 +59,22 @@ jobs:
           - { db: mysql, odbc: odbc }
           - { db: pgsql, odbc: odbc }
           - { db: sqlite, odbc: odbc }
-          # ignore old Laravel for newer PHP
-          - { php: 8.1, lib: { laravel: ^7.0, polyfill: 'polyfill' } }
-          - { php: 8.1, lib: { laravel: ^6.0, polyfill: 'polyfill' } }
           # ignore old PHP for newer Laravel
           - { php: 8.0, lib: { laravel: ^10.0 } }
-          - { php: 7.4, lib: { laravel: ^10.0 } }
-          - { php: 7.4, lib: { laravel: ^9.0 } }
+          - { php: 8.0, lib: { laravel: ^11.0 } }
+          - { php: 8.1, lib: { laravel: ^11.0 } }
+        include:
+          - { lib: { laravel: ^9.0 }, phpstan: 1 }
+          - { lib: { laravel: ^10.0 }, phpstan: 1 }
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           coverage: xdebug
-
-      - name: Set up MySQL
-        if: matrix.db == 'mysql'
-        run: |
-          mysql \
-            --host=127.0.0.1 \
-            --port=3306 \
-            --user=root \
-            --password=testing <<< "
-              ALTER USER 'testing'@'%' IDENTIFIED WITH mysql_native_password BY 'testing';
-            "
 
       - name: Set up SQLServer
         if: matrix.db == 'sqlsrv'
@@ -98,6 +85,10 @@ jobs:
               -U sa \
               -P Password! \
               -Q "create database [testing]"
+
+      - name: Remove impossible dependencies
+        if: ${{ matrix.phpstan != 1 }}
+        run: composer remove nunomaduro/larastan --dev --no-update
 
       - name: Adjust Package Versions
         run: |
@@ -111,7 +102,7 @@ jobs:
         run: mkdir -p build/logs
 
       - name: PHPStan
-        if: ${{ !matrix.lib.polyfill }}
+        if: ${{ matrix.phpstan == 1 }}
         run: composer phpstan
 
       - name: Test
