--- a/composer.json
+++ b/composer.json
@@ -19,20 +19,19 @@
     "autoload-dev": {
         "psr-4": {
             "Mpyw\\LaravelRetryOnDuplicateKey\\Tests\\": "tests/"
-        },
-        "files": ["tests/polyfill.php.stub"]
+        }
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "ext-pdo": "*",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
-        "illuminate/database": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
-        "illuminate/contracts": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "illuminate/support": "^9.0 || ^10.0 || ^11.0",
+        "illuminate/database": "^9.0 || ^10.0 || ^11.0",
+        "illuminate/contracts": "^9.0 || ^10.0 || ^11.0",
         "mpyw/laravel-unique-violation-detector": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "*",
-        "orchestra/testbench-core": "^4.9 || ^5.9 || >=6.6",
+        "orchestra/testbench-core": ">=7.0",
         "phpunit/phpunit": ">=9.5",
         "phpstan/phpstan": ">=1.1",
         "phpstan/extension-installer": ">=1.1",
